# tasobri

./: CMakeLists.txt  README.md  main.cpp  qml.qrc
config/: databasesetup.cpp  databasesetup.h
control/: topiccontrol.cpp  topiccontrol.h
domain/: topicdomain.cpp  topicdomain.h
dto/: topicdto.cpp  topicdto.h
ui/: TopicCreate.qml  TopicList.qml  main.qml
